# predicate-quickstart

simple-predicate/: Cargo.toml  Forc.toml
simple-predicate/src/: main.sw
simple-predicate/tests/: harness.rs
