[package]
name = "simple_predicate"
description = "A simple predicate."
version = "0.1.0"
edition = "2021"
authors = ["Fuel Labs <contact@fuel.sh>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.47", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
